--- a/index.css
+++ b/index.css
@@ -1,6 +1,3 @@
-body {
-	
-}
 .o-container--page {
     width: 100%;
     max-width: 1200px;
@@ -30,6 +27,7 @@ body {
 	display: inline-block;
     width: 100%;
     background-color: #00ae42;
+	
 }
 .area-title{
 	margin-bottom: 2.1875rem;
@@ -55,3 +53,17 @@ body {
     top : -17rem ;
     width: 30%;
 }
+
+.o-container-page {
+    width: 100%;
+    max-width: 1200px;
+    padding-right: .9375rem;
+    padding-left: .9375rem;
+    margin-right: auto;
+    margin-left: auto;
+	
+}
+
+
+
+
